--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         </div>
     </header>
     <main>
-        <p id="sample"></p>
+        <h1>Hello World!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolor repellat consectetur est nostrum enim, atque obcaecati suscipit perferendis facilis, deserunt ex omnis velit voluptatum libero. Et aut alias quidem.</p>
     </main>
     <script src="./js/main.js"></script>
 </body>
