--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
     <main>
         <h1>Hello World!</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolor repellat consectetur est nostrum enim, atque obcaecati suscipit perferendis facilis, deserunt ex omnis velit voluptatum libero. Et aut alias quidem.</p>
+        <form id="myForm">
+            <div class="form-group">
+                <label>Site Name:</label>
+                <input type="text" class="form-control" id="siteName" placeholder="Website Name">
+            </div>
+            <div class="form-group">
+                <label>Site Url:</label>
+                <input type="text" class="form-control" id="siteUrl" placeholder="Website Url">
+            </div>
+        </form>
     </main>
     <script src="./js/main.js"></script>
 </body>
