--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                 <label>Site Url:</label>
                 <input type="text" class="form-control" id="siteUrl" placeholder="Website Url">
             </div>
+            <button type="submit">Submit</button>
         </form>
+        <div id="bookmarksResults">Result here!</div>
     </main>
     <script src="./js/main.js"></script>
 </body>
