--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Dropdown</title>
         <link rel="stylesheet" href="./css/main.css">
       </head>      
-<body>
+<body onload="fetchBookmarks()">
     <header>
         <div class="topnav" id="myTopnav">
             <div class="branding">
