--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <button type="submit">Submit</button>
         </form>
-        <div id="bookmarksResults">Result here!</div>
+        <div id="bookmarksResults"></div>
     </main>
     <script src="./js/main.js"></script>
 </body>
