--- a/index.html
+++ b/index.html
@@ -49,6 +49,29 @@
             <button type="submit">Submit</button>
         </form>
         <div id="bookmarksResults"></div>
+        <h3 id="sample"></h3>
+        <div>
+            <div>
+                <label>Name</label>
+                <input type="text">
+            </div>
+            <div>
+                <label>Surname</label>
+                <input type="text">
+            </div>
+            <div>
+                <label>Middlename</label>
+                <input type="text">
+            </div>
+            <div>
+                <label>Age</label>
+                <input type="text">
+            </div>
+            <div>
+                <label>Address</label>
+                <input type="text">
+            </div>
+        </div>
     </main>
     <script src="./js/main.js"></script>
 </body>
