--- a/index.html
+++ b/index.html
@@ -52,23 +52,30 @@
         <h3 id="sample"></h3>
         <div>
             <div>
-                <label>Name</label>
+                <label>Name:</label>
                 <input type="text">
             </div>
             <div>
-                <label>Surname</label>
+                <label>Surname:</label>
                 <input type="text">
             </div>
             <div>
-                <label>Middlename</label>
+                <label>Middlename:</label>
                 <input type="text">
             </div>
-            <div>
-                <label>Age</label>
-                <input type="text">
+            <div class="choose-branch4">
+                <h2>Type a schedule</h2>
+                <div class="dates">
+                    <label>Date:</label>
+                   <input type="date" placeholder="type date">
+               </div>
+               <div>
+                   <label>Time:</label>
+                   <input type="time" placeholder="type time">
+               </div>
             </div>
             <div>
-                <label>Address</label>
+                <label>Address:</label>
                 <input type="text">
             </div>
         </div>
