--- a/index.html
+++ b/index.html
@@ -50,33 +50,37 @@
         </form>
         <div id="bookmarksResults"></div>
         <h3 id="sample"></h3>
-        <div>
-            <div>
-                <label>Name:</label>
-                <input type="text">
+        <div id="inputs">
+            <div class="form">
+                <div>
+                    <label>Name:</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label>Surname:</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label>Middlename:</label>
+                    <input type="text">
+                </div>
             </div>
-            <div>
-                <label>Surname:</label>
-                <input type="text">
-            </div>
-            <div>
-                <label>Middlename:</label>
-                <input type="text">
-            </div>
-            <div class="choose-branch4">
-                <h2>Type a schedule</h2>
-                <div class="dates">
-                    <label>Date:</label>
-                   <input type="date" placeholder="type date">
-               </div>
-               <div>
-                   <label>Time:</label>
-                   <input type="time" placeholder="type time">
-               </div>
-            </div>
-            <div>
-                <label>Address:</label>
-                <input type="text">
+            <div class="date">
+                <div>
+                    <h2>Type a schedule</h2>
+                    <div>
+                        <label>Date:</label>
+                    <input type="date" placeholder="type date">
+                </div>
+                <div>
+                    <label>Time:</label>
+                    <input type="time" placeholder="type time">
+                </div>
+                </div>
+                <div>
+                    <label>Address:</label>
+                    <input type="text">
+                </div>
             </div>
         </div>
     </main>
