--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
                     <label>Address:</label>
                     <input type="text">
                 </div>
+                <table>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                    </tr>
+                    <tr>
+                        <td>John</td>
+                        <td>20</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </main>
