--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <input type="text">
                 </div>
             </div>
+            <h1>Hello world</h1>
             <div class="date">
                 <div>
                     <h2>Type a schedule</h2>
