--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
                 <label>Site Name:</label>
                 <input type="text" class="form-control" id="siteName" placeholder="Website Name">
             </div>
+            <div>
+                <form>
+                </form>
+            </div>
             <div class="form-group">
                 <label>Site Url:</label>
                 <input type="text" class="form-control" id="siteUrl" placeholder="Website Url">
