--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             </div>
             <div>
                 <form>
+                    <input></input>
+                    <label></label>
                 </form>
             </div>
             <div class="form-group">
