--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                         <a href="#">Blog 2</a>
                         <a href="#">Blog 3</a>
                         <a href="#">Blog 4</a>
+                        <a href="#">Blog 5</a>
                     </div>
                 </div>
             </div>
