--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <a href="#">Blog 3</a>
                         <a href="#">Blog 4</a>
                         <a href="#">Blog 5</a>
+                        <a href="#">Blog 6</a>
                     </div>
                 </div>
             </div>
